# meyume-moai-1-6

./: .gitignore  README.md
ant/libmoai/jni/: Android.mk
ant/libmoai/modules/: moai-sim.mk
cmake/cmake-modules/: module-config.cmake  module-setup.cmake  platform-linux.cmake  platform-osx.cmake  platform-windows.cmake
cmake/hosts/host-html/: CMakeLists.txt
cmake/hosts/host-linux-sdl/: CMakeLists.txt
cmake/hosts/host-modules/: CMakeLists.txt
cmake/hosts/host-osx-sdl/: CMakeLists.txt
cmake/hosts/host-win-sdl/: CMakeLists.txt
cmake/libmoai/: CMakeLists.txt
cmake/libmoai/config/: moai_config.h.in
cmake/libmoai/moai-android/: CMakeLists.txt
cmake/libmoai/moai-android/mym-android/: CMakeLists.txt
cmake/libmoai/moai-chipmunk/: CMakeLists.txt
cmake/libmoai/moai-crypto/: CMakeLists.txt
cmake/libmoai/moai-iphone/: CMakeLists.txt
cmake/libmoai/moai-iphone/mym-ios/: CMakeLists.txt
cmake/libmoai/moai-luaext/: CMakeLists.txt
cmake/libmoai/moai-sim/: CMakeLists.txt
cmake/libmoai/zlcore/: CMakeLists.txt
host-templates/android/studio/MoaiTemplate/: gradle.properties
host-templates/android/studio/MoaiTemplate/app/: build.gradle  proguard-rules.pro
host-templates/android/studio/MoaiTemplate/app/src/main/: AndroidManifest.xml.in
host-templates/android/studio/MoaiTemplate/app/src/main/jni/: Android.mk  MoaiModules.mk
host-templates/android/studio/MoaiTemplate/app/src/main/jni/host-modules/: aku_modules.cpp  aku_modules_ios.mm  aku_modules_ios_config.h  aku_plugins.cpp
host-templates/android/studio/MoaiTemplate/app/src/main/res/values/: strings.xml
host-templates/ios/Moai Template/: libmoai
host-templates/ios/Moai Template/MoaiTemplate.xcodeproj/: project.pbxproj
host-templates/ios/Moai Template/MoaiTemplate.xcodeproj/project.xcworkspace/xcshareddata/: MoaiTemplate.xccheckout
host-templates/ios/Moai Template/app/Classes/: MoaiAppDelegate.mm
host-templates/ios/Moai Template/host-modules/: aku_modules_ios.mm  aku_modules_ios_config.h
host-templates/linux/: build.sh
host-templates/linux/cmake/: CMakeLists.txt
host-templates/linux/cmake/host-modules/: CMakeLists.txt
host-templates/linux/host-modules/: aku_modules.cpp  aku_modules_ios.h  aku_modules_ios.mm  aku_modules_ios_config.h
host-templates/linux/host-sdl/: SDLHost.cpp
host-templates/osx/Moai Template/: bootstrap.lua
host-templates/osx/Moai Template/Moai Template.xcodeproj/: project.pbxproj
host-templates/osx/Moai Template/Moai Template.xcodeproj/project.xcworkspace/xcshareddata/: Moai Template.xccheckout
host-templates/osx/Moai Template/Moai Template/host-modules/: aku_modules_util.cpp
host-templates/osx/Moai Template/Moai Template/host-sdl/: SDLHost.cpp
host-templates/windows/vs2012/: Moai.sln
samples/audio-untz/: main.lua
samples/hello-moai/: main.lua
src/host-html/host-template/www/: moai.html  moaihost.js
src/host-ios/: main.mm
src/host-ios/Classes/: MoaiVC.mm
src/host-modules/: aku_modules_ios.mm  aku_modules_ios_config.h  aku_modules_util.cpp
src/host-sdl/: SDLHost.cpp
src/moai-android/: moai.cpp
src/moai-android-twitter/: MOAITwitterAndroid.cpp  host.cpp  host.h
src/moai-android-twitter/jni/: host-jni.cpp
src/moai-http-client/: MOAIHttpTaskNSURL.h  MOAIHttpTaskNSURL.mm  host.cpp
src/moai-ios/: MOAINotificationsIOS.h  MOAINotificationsIOS.mm  host.mm  moaiext-iphone.h
src/moai-ios-adcolony/: MOAIAdColonyIOS.mm
src/moai-ios-chartboost/: MOAIChartBoostIOS.mm
src/moai-ios-tapjoy/: MOAITapjoyIOS.mm
src/moai-ios-vungle/: MOAIVungleIOS.mm
src/moai-sim/: MOAIImage-webp.cpp  MOAIImage.cpp  MOAIImage.h  MOAISim.cpp  MOAISim.h  MOAIVertexBuffer.h
src/mym-android/: MYMMOAIAmazonAnalytics.cpp  MYMMOAIAmazonAnalytics.h  MYMMOAIAmazonGameCircle.cpp  MYMMOAIAmazonGameCircle.h  MYMMOAIAmazonIAP.cpp  MYMMOAIAmazonIAP.h  MYMMOAIAudioAndroid.cpp  MYMMOAIAudioAndroid.h  MYMMOAIChartboostAndroid.cpp  MYMMOAIChartboostAndroid.h  MYMMOAIFacebookAndroid.cpp  MYMMOAIFacebookAndroid.h  MYMMOAIGoogleBillingAndroid.cpp  MYMMOAIGoogleBillingAndroid.h  MYMMOAIGooglePlayApkExtension.cpp  MYMMOAIGooglePlayApkExtension.h  MYMMOAIGooglePlayServices.cpp  MYMMOAIGooglePlayServices.h  MYMMOAIHelper.cpp  MYMMOAIHelper.h  MYMMOAITwitterAndroid.cpp  MYMMOAITwitterAndroid.h  host.cpp  host.h
src/mym-android/jni/: host-jni.cpp
src/mym-ios/: MYMMOAIAmazonAnalyticsIOS.h  MYMMOAIAmazonAnalyticsIOS.mm  MYMMOAIAppIOS.h  MYMMOAIAppIOS.mm  MYMMOAIChartBoostIOS.h  MYMMOAIChartBoostIOS.mm  MYMMOAIFacebookIOS.h  MYMMOAIFacebookIOS.mm  MYMMOAIShareIOS.h  MYMMOAIShareIOS.mm  host.h  host.mm
util/: host-android-gradle.lua  host-ios.lua  host-linux.lua  host-osx-app.lua  host-windows-vs2012.lua  moaiutil.bat
vs2008/: moai.sln
vs2010/: moai.sln
xcode/ios/Classes/: MoaiView.mm
xcode/ios/MoaiSample.xcodeproj/project.xcworkspace/xcshareddata/: MoaiSample.xccheckout
